Fix footer size on mobile

--- a/src/sass/page-footer.scss
+++ b/src/sass/page-footer.scss
@@ -7,6 +7,7 @@
 }
 
 .copyright {
+  text-align: center;
   color: $primary-white-color;
 }
 
